# BayesianSSD

./: .gitignore  BiharmonicReconstruction.cpp  BiharmonicReconstruction.h  CMakeLists.txt  LinearSystemSolver.cpp  LinearSystemSolver.h  Q.cpp  Q.h  README.md  ScalarField.cpp  generate2Dpoints.py  invGrad2Dpoints.py  matRedTest copy.py  matRedTest.py  normalsTest.py  print2Dpoints.py  print2Dpoints_iniFig.py  printEigenValues.py  printIterations.py  test.ipynb  timing.cpp
config/: MyHand.json
config2D/: initFig.json
data/: MyHand.ply  initFig.txt
include/: BoundingBox.h  EigenDecompositionLaplacian.h  EigenSolver.h  EigenSparseMatrix.h  EigenSquareSolver.h  GPReconstruction.h  InterpolationMethod.h  NodeTree.h  PointCloud.h  PoissonReconstruction.h  Quadtree.h  ScalarField.h  ScalarFieldRender.h  SmoothSurfaceReconstruction.h  SquareSystem.h  Timer.h  Vector.h
libs/: CMakeLists.txt
src/: Image.cpp  Image.h  MyImage.cpp  MyImage.h  PointCloud.cpp  Quadtree.cpp
src/tools/: main.cpp
src/tools/2D/: main.cpp
src/tools/3D/: main.cpp
src/tools/Sampling/: main.cpp
test/: MyTest.py  generateGrid.py  test.py  test3D.py
viewer/: CMakeLists.txt  main.cpp
viewer/shaders/: ColorPalettes.glsl  LightUtils.glsl  ModelPlaneCut.frag  ModelPlaneCut.vert  OctreeRender.comp  ScreenPlane.frag  ScreenPlane.vert  SdfFunction.glsl  SdfOctreePlane.frag  Utils.glsl  VarOctreePlane.frag
